# TrackOverlayML

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
data/: dataloader_multi.py  datasets_multi.py
network/: classifier.py
scripts/: evaluate_model.py  prepare_data.py  run_pipeline.py  train_model.py
utils/: args.py  evaluator_multi.py  io.py  plotting.py  xscore.py
